# covid-19-puerto-rico

./: .dockerignore  .gitignore  Bioportal.md  Dockerfile  INSTRUCCIONES.md  README.en.md  README.md  build-docker-image.sh  buildspec-images.yml  buildspec-manifest.yml  buildspec.yml  docker-compose.yaml  flake.nix  generate-reports.sh  index.html  pyproject.toml  requirements.txt
2020-04-25/: index.html
2020-04-26/: index.html
2020-04-27/: index.html
2020-04-28/: index.html
2020-04-29/: index.html
2020-04-30/: index.html
2020-05-01/: index.html
2020-05-02/: index.html
2020-05-03/: index.html
2020-05-04/: index.html
2020-05-05/: index.html
2020-05-06/: index.html
2020-05-07/: index.html
2020-05-08/: index.html
2020-05-09/: index.html
2020-05-10/: index.html
2020-05-11/: index.html
2020-05-12/: index.html
2020-05-13/: index.html
2020-05-14/: index.html
2020-05-15/: index.html
2020-05-16/: index.html
2020-05-17/: index.html
2020-05-18/: index.html
2020-05-19/: index.html
2020-05-20/: index.html
2020-05-21/: index.html
2020-05-22/: index.html
2020-05-23/: index.html
2020-05-24/: index.html
2020-05-25/: index.html
2020-05-26/: index.html
2020-05-27/: index.html
2020-05-28/: index.html
2020-05-29/: index.html
2020-05-30/: index.html
2020-05-31/: index.html
2020-06-01/: index.html
2020-06-02/: index.html
2020-06-03/: index.html
2020-06-04/: index.html
2020-06-05/: index.html
2020-06-06/: index.html
2020-06-07/: index.html
2020-06-08/: index.html
2020-06-09/: index.html
2020-06-10/: index.html
2020-06-11/: index.html
2020-06-12/: index.html
2020-06-13/: index.html
2020-06-14/: index.html
2020-06-15/: index.html
2020-06-16/: index.html
2020-06-17/: index.html
2020-06-18/: index.html
2020-06-19/: index.html
2020-06-20/: index.html
2020-06-21/: index.html
2020-06-22/: index.html
2020-06-23/: index.html
2020-06-24/: index.html
2020-06-25/: index.html
2020-06-26/: index.html
2020-06-27/: index.html
2020-06-28/: index.html
2020-06-29/: index.html
2020-06-30/: index.html
2020-07-01/: index.html
2020-07-02/: index.html
2020-07-03/: index.html
2020-07-04/: index.html
2020-07-05/: index.html
2020-07-06/: index.html
2020-07-07/: index.html
2020-07-08/: index.html
2020-07-09/: index.html
2020-07-10/: index.html
2020-07-11/: index.html
2020-07-12/: index.html
2020-07-13/: index.html
2020-07-14/: index.html
2020-07-15/: index.html
2020-07-16/: index.html
2020-07-17/: index.html
2020-07-18/: index.html
2020-07-19/: index.html
2020-07-20/: index.html
2020-07-21/: index.html
2020-07-22/: index.html
2020-07-23/: index.html
2020-07-24/: index.html
2020-07-25/: index.html
2020-07-26/: index.html
2020-07-27/: index.html
2020-07-28/: index.html
2020-07-29/: index.html
2020-07-30/: index.html
2020-07-31/: index.html
2020-08-01/: index.html
downloader/: .dockerignore  .gitignore  Dockerfile  build-docker-image.sh  buildspec.yml  push-docker-image.sh  pyproject.toml  run-in-docker.sh
downloader/.github/workflows/: BUILD_MULTIARCH_DOCKER_IMAGE.yml
downloader/CodeBuild/: buildspec-images.yml
downloader/Terraform/: .terraform.lock.hcl  AWS.tf  Batch.tf  CodeBuild.tf  IAM.tf  S3.tf
downloader/docker/: install-duckdb.sh
downloader/duckdb/Biostatistics/: cases.sql.j2  data-sources.sql.j2  deaths.sql.j2  tests-grouped.sql.j2  tests.sql.j2
downloader/scripts/: andy-bloch-dashboard.sh  bioportal-deaths-to-csv.sh  bioportal-download.sh  bioportal-to-jsonl.sh  biostatistics-convert.sh  biostatistics-download.sh  covid19datos-v2.sh  csv-to-parquet.sh  hhs-download.sh  json-array-to-parquet.sh  run-and-sync.sh  scrape-cdc-vaccinations.sh
downloader/src/covid_19_puerto_rico_downloader/: __init__.py  biostatistics.py  covid19datos_v2.py  hhs.py  pango.py  task.py  util.py  walgreens.py
downloader/src/covid_19_puerto_rico_downloader/templates/: tests.sql.j2
downloader/src/covid_19_puerto_rico_downloader/templates/biostatistics/: cases.sql.j2  data-sources.sql.j2  deaths.sql.j2  flu-cases.sql.j2  persons-with-vaccination-status.sql.j2  tests-grouped.sql.j2  tests.sql.j2
downloader/src/covid_19_puerto_rico_downloader/templates/covid19datos-v2/: casos.sql.j2  defunciones.sql.j2  pruebas.sql.j2  sistemas_salud.sql.j2  vacunacion.sql.j2  vigilancia.sql.j2
downloader/src/covid_19_puerto_rico_downloader/templates/hhs/: covid-19_diagnostic_lab_testing.sql.j2  excess_deaths_associated_with_covid_19.sql.j2  provisional_covid_19_deaths_by_sex_and_age.sql.j2  reported_hospital_capacity_admissions_facility_level_weekly_average_timeseries.sql.j2  reported_hospital_utilization_timeseries.sql.j2  reported_patient_impact_hospital_capacity_timeseries.sql.j2
downloader/src/covid_19_puerto_rico_downloader/templates/pango/: lineages.sql.j2
downloader/src/covid_19_puerto_rico_downloader/templates/walgreens/: Tracker_Aggregation.sql.j2
website/: .gitignore  Dockerfile  build-docker-image.sh  pyproject.toml  run-in-docker.sh
website/assets/css/: styles.css
website/assets/data/: Covid19PuertoRico.duckdb.sql  README.md
website/assets/data/CovidTracking/: puerto-rico-history.csv
website/assets/data/cases/: AgeGroups-antigens.csv  Municipalities-antigens.csv  Municipalities-molecular.csv  PuertoRico-bioportal.csv  PuertoRico-hospitalizations.csv
website/config/: docker.toml  environment.yaml  localhost.toml  localhost.yaml
website/docker/: run-and-sync.sh
website/scripts/: build-docker-image.sh  output-s3-sync.sh  run-in-docker.sh  website-sync.sh
website/scripts/one-off/: convert-orders-basic.sh  convert-tests.sh  extract-gh-pages.py
website/src/covid_19_puerto_rico/: __init__.py  __main__.py  charts.py  main.py  molecular.py  util.py  website.py
website/src/covid_19_puerto_rico/migrations/: __init__.py  redirect_index.html
website/src/covid_19_puerto_rico/templates/: base.html  bulletin_date_index.html  top_index.html
(+1408 files in other folders)
