[tool.poetry]
name = "covid-19-puerto-rico"
version = "0.1.0"
description = "Collection of COVID-19 data and analyses for Puerto Rico"
authors = ["sacundim <anybody@sacundim.org>"]
packages = [{ include = "covid_19_puerto_rico", from = "src"}]

[tool.poetry.scripts]
covid19pr = 'covid_19_puerto_rico:main'

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.0.3"
sqlalchemy = "^1.3.16"
altair = "^4.1.0"
toml = "^0.10.0"
altair-saver = "^0.5.0"
wand = "^0.5.9"
jinja2 = "^3.1.1"
geojson = "^2.5.0"
PyAthena = "^1.11.2"

[tool.poetry.dev-dependencies]
ghp-import = "^0.5.5"
GitPython = "^3.1.27"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
