[tool.poetry]
name = "covid-19-puerto-rico-downloader"
version = "0.2.0"
description = "Data downloader application for Puerto Rico-related COVID-19 data"
authors = ["sacundim <anybody@sacundim.org>"]
packages = [{ include = "covid_19_puerto_rico_downloader", from = "src"}]

[tool.poetry.scripts]
biostatistics-download = 'covid_19_puerto_rico_downloader:biostatistics'
covid19datos-download = 'covid_19_puerto_rico_downloader:covid19datos_v2'
hhs-socrata-download = 'covid_19_puerto_rico_downloader:hhs_download'
walgreens-download = 'covid_19_puerto_rico_downloader:walgreens'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
sodapy = "^2.1.0"
duckdb = "^0.8.1"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
