[tool.poetry]
name = "covid-19-puerto-rico"
version = "0.1.0"
description = "Collection of COVID-19 data and analyses for Puerto Rico"
authors = ["sacundim <anybody@sacundim.org>"]
packages = [{ include = "covid_19_puerto_rico", from = "src"}]

[tool.poetry.scripts]
covid19pr = 'covid_19_puerto_rico:main'

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^1.5.3"
sqlalchemy = "^1.4.48"
altair = "^5.0"
toml = "^0.10.0"
jinja2 = "^3.1.1"
geojson = "^2.5.0"
PyAthena = "^1.11.2"
vl-convert-python = "^0.11.0"
pillow = "^10.0.0"
vegafusion = {extras = ["embed"], version = "^1.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"