[tool.poetry]
name = "covid-19-puerto-rico"
version = "0.1.0"
description = "Collection of COVID-19 data and analyses for Puerto Rico"
authors = ["sacundim <anybody@sacundim.org>"]
packages = [{ include = "covid_19_puerto_rico", from = "src"}]

[tool.poetry.scripts]
covid19pr = 'covid_19_puerto_rico:main'

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
altair = "^5.1"
jinja2 = "^3.1.1"
geojson = "^2.5.0"
PyAthena = "^3.0"
vl-convert-python = "^0.13"
pillow = "^10.0.0"
envyaml = "^1.10.211231"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"